--- a/blog/style_response.css
+++ b/blog/style_response.css
@@ -120,3 +120,10 @@ h2{
   margin: 3px;
   color: red;
 }
+
+#disqus_thread{
+  padding-top: 30px;
+  max-width: 880px;
+  margin-left: auto;
+  margin-right: auto;
+}
